Introduce support for articles CRUD actions
