# server/domain/articles_rest.go
@@ -17,8 +17,10 @@ var (
 func RegisterArticlesRestAPI(r *gin.Engine, middleWares ...gin.HandlerFunc) {
 	g := r.Group(PathArticles, middleWares...)
 	g.GET("", handleQueryArticles)
+	g.POST("", handleCreateArticle)
 	g.GET(":id", handleDetailArticle)
 	g.PUT(":id", handlePatchArticle)
+	g.DELETE(":id", handleDeleteArticle)
 }
 
 // @ID article-meta-list
@@ -34,11 +36,33 @@ func handleQueryArticles(c *gin.Context) {
 		panic(&fail.ErrBadParam{Cause: err})
 	}
 
-	record, err := QueryArticlesFunc(q, &sessions.Session{Context: c.Request.Context(), Identity: sessions.Identity{ID: 1}})
+	record, err := QueryArticlesFunc(q, sessions.ExtractSessionFromGinContext(c))
 	if err != nil {
 		panic(err)
 	}
 	c.JSON(http.StatusOK, record)
+}
+
+// @ID article-create
+// @Param _ body domain.ArticleCreate true "request body"
+// @Success 201 {object} misc.IdObject
+// @Failure default {object} fail.ErrorBody "error"
+// @Router /v1/articles/ [post]
+func handleCreateArticle(c *gin.Context) {
+	p := ArticleCreate{}
+	err := c.ShouldBindJSON(&p)
+	if err != nil && err.Error() == "EOF" {
+		panic(&fail.ErrBadParam{Cause: errors.New("empty body")})
+	}
+	if err != nil {
+		panic(&fail.ErrBadParam{Cause: err})
+	}
+
+	id, err := CreateArticleFunc(&p, sessions.ExtractSessionFromGinContext(c))
+	if err != nil {
+		panic(err)
+	}
+	c.JSON(http.StatusOK, misc.NewIdObject(id))
 }
 
 // @ID article-detail
@@ -52,7 +76,7 @@ func handleDetailArticle(c *gin.Context) {
 		panic(err)
 	}
 
-	detail, err := DetailArticleFunc(id, &sessions.Session{Context: c.Request.Context()})
+	detail, err := DetailArticleFunc(id, sessions.ExtractSessionFromGinContext(c))
 	if err != nil {
 		panic(err)
 	}
@@ -61,7 +85,8 @@ func handleDetailArticle(c *gin.Context) {
 
 // @ID article-patch
 // @Param id path uint64 true "id"
-// @Success 200 {object} domain.ArticlePatch "response body"
+// @Param _ body domain.ArticlePatch true "request body"
+// @Success 200 {object} string "response body is empty"
 // @Failure default {object} fail.ErrorBody "error"
 // @Router /v1/articles/{id} [put]
 func handlePatchArticle(c *gin.Context) {
@@ -79,9 +104,27 @@ func handlePatchArticle(c *gin.Context) {
 		panic(&fail.ErrBadParam{Cause: err})
 	}
 
-	err = PatchArticleFunc(id, &p, &sessions.Session{Context: c.Request.Context()})
+	err = PatchArticleFunc(id, &p, sessions.ExtractSessionFromGinContext(c))
 	if err != nil {
 		panic(err)
 	}
 	c.JSON(http.StatusOK, gin.H{})
+}
+
+// @ID article-delete
+// @Param id path uint64 true "id"
+// @Success 204 {object} string "response body is empty"
+// @Failure default {object} fail.ErrorBody "error"
+// @Router /v1/articles/{id} [delete]
+func handleDeleteArticle(c *gin.Context) {
+	id, err := misc.BindingPathID(c)
+	if err != nil {
+		panic(err)
+	}
+
+	err = DeleteArticleFunc(id, sessions.ExtractSessionFromGinContext(c))
+	if err != nil {
+		panic(err)
+	}
+	c.JSON(http.StatusNoContent, gin.H{})
 }
